# graphcal

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .vetignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  grammar.ebnf  hawk.toml  justfile  renovate.json5  zensical.toml
crates/graphcal-cli/: Cargo.toml  build.rs
crates/graphcal-cli/src/: deps.rs  display.rs  format.rs  json_input.rs  lib.rs  main.rs  overrides.rs  plot.rs  plugin.rs
crates/graphcal-cli/src/shell/: commands.rs  format.rs  graph.rs  highlight.rs  mod.rs
crates/graphcal-cli/tests/: cli.rs  plugin_cmd.rs  plugin_e2e.rs
crates/graphcal-compiler/: Cargo.toml
crates/graphcal-compiler/src/: builtin.rs  dag_id.rs  dimension.rs  function_signature.rs  lib.rs  nat.rs  plot_props.rs  stack.rs
crates/graphcal-compiler/src/desugar/: convert.rs  desugared_ast.rs  mod.rs  resolved_ast.rs
crates/graphcal-compiler/src/hir/: diagnostics.rs  expr.rs  lower.rs  mod.rs  types.rs
crates/graphcal-compiler/src/ir/: fn_check.rs  ir.rs  lower.rs  mod.rs
crates/graphcal-compiler/src/registry/: builtins.rs  dag.rs  declared_type.rs  dimension_registry.rs  error.rs  format.rs  index.rs  manifest.rs  mod.rs  prelude.rs  registry.rs  resolve_types.rs  runtime_value.rs  time_scale.rs  type_def.rs  types.rs  unit.rs
crates/graphcal-compiler/src/syntax/: ast.rs  attribute.rs  comments.rs  dag_id.rs  decl_name.rs  desugar.rs  dimension.rs  function_name.rs  index_name.rs  lexer.rs  local_name.rs  mod.rs  module_name.rs  module_resolve.rs  name_resolve.rs  names.rs  nat.rs  non_empty.rs  phase.rs  plot_name.rs  plugin.rs  span.rs  token.rs  type_name.rs  visitor.rs
crates/graphcal-compiler/src/tir/: mod.rs  tir.rs  typed.rs
crates/graphcal-dag/: Cargo.toml
crates/graphcal-dag/src/: canvas.rs  layout.rs  lib.rs  render.rs
crates/graphcal-dag/src/snapshots/: graphcal_dag__tests__snapshot_diamond.snap  graphcal_dag__tests__snapshot_fan_in.snap  graphcal_dag__tests__snapshot_fan_out.snap  graphcal_dag__tests__snapshot_independent_params.snap  graphcal_dag__tests__snapshot_linear_chain.snap  graphcal_dag__tests__snapshot_rocket.snap
crates/graphcal-eval/: Cargo.toml
crates/graphcal-eval/src/: builtins.rs  const_eval.rs  dag.rs  decl_key.rs  dim_check.rs  domain_check.rs  error.rs  eval.rs  eval_expr.rs  exec_plan.rs  fn_check.rs  host_fns.rs  import_surface.rs  inline_dag.rs  io.rs  ir.rs  lib.rs  loader.rs  prelude.rs  registry.rs  resolve.rs  time_scale.rs  tir.rs
crates/graphcal-eval/src/dim_check/: builtins.rs  helpers.rs  infer.rs  mod.rs  tests.rs
crates/graphcal-eval/src/eval/: display.rs  format.rs  mod.rs  plot_data.rs  project.rs  runtime.rs  tests.rs  types.rs
crates/graphcal-eval/src/eval_expr/: aggregations.rs  arithmetic.rs  builtin_call.rs  collections.rs  control.rs  conversions.rs  functions.rs  hir_eval.rs  mod.rs  numeric.rs  unit_scale.rs
crates/graphcal-eval/src/graph_ir/: dot.rs  mod.rs
crates/graphcal-eval/tests/: declaration_order.rs  edge_case_bugs.rs  error_snapshots.rs  phase0_regressions.rs
crates/graphcal-eval/tests/snapshots/: error_snapshots__error_affine_temperature_unit.snap  error_snapshots__error_ambiguous_bare_index_label.snap  error_snapshots__error_arrow_chain_paren.snap  error_snapshots__error_assert_not_bool.snap  error_snapshots__error_assumes_on_const.snap  error_snapshots__error_assumes_unknown_assert.snap  error_snapshots__error_at_assert.snap  error_snapshots__error_at_in_const.snap  error_snapshots__error_at_in_fn.snap  error_snapshots__error_bad_const_casing.snap  error_snapshots__error_bad_param_casing.snap  error_snapshots__error_boolean_dim_error.snap  error_snapshots__error_const_cycle.snap  error_snapshots__error_const_node_runtime_unit.snap  error_snapshots__error_const_unit_graph_ref.snap  error_snapshots__error_conversion_dim_mismatch.snap  error_snapshots__error_conversion_dim_mismatch_alias.snap  error_snapshots__error_convert_dynamic_target_zero_scale.snap  error_snapshots__error_convert_in_arithmetic.snap  error_snapshots__error_convert_in_assert.snap  error_snapshots__error_convert_int_source.snap  error_snapshots__error_convert_target_scale_overflow.snap  error_snapshots__error_cross_universe_name_collision.snap  (+94 more)
crates/graphcal-fmt/: Cargo.toml
crates/graphcal-fmt/src/: format.rs  lib.rs
crates/graphcal-fmt/tests/: format_tests.rs
crates/graphcal-io/: Cargo.toml
crates/graphcal-io/src/: in_memory_fs.rs  lib.rs  overlay_fs.rs  real_fs.rs
crates/graphcal-ir/: Cargo.toml
crates/graphcal-ir/src/: fn_check.rs  ir.rs  lib.rs
crates/graphcal-lsp/: Cargo.toml
crates/graphcal-lsp/src/: code_actions.rs  completion.rs  convert.rs  cursor_context.rs  diagnostics.rs  document_links.rs  document_symbols.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lib.rs  main.rs  references.rs  rename.rs  resolve.rs  server.rs  signature_help.rs  symbol_table.rs
crates/graphcal-plugin/: Cargo.toml
crates/graphcal-plugin-abi/: Cargo.toml
crates/graphcal-plugin-abi/src/: lib.rs  manifest.rs  section.rs
crates/graphcal-plugin-host/: Cargo.toml
crates/graphcal-plugin-host/src/: convert.rs  host.rs  lib.rs  module.rs  registry.rs
crates/graphcal-plugin-host/tests/: project_eval.rs  runtime.rs
crates/graphcal-plugin-macros/: Cargo.toml
crates/graphcal-plugin-macros/src/: codegen.rs  dims.rs  lib.rs  lower.rs  manifest.rs  parse.rs  rational.rs
crates/graphcal-plugin/src/: lib.rs
crates/graphcal-plugin/tests/: expansion.rs  prelude_drift.rs
crates/graphcal-tir/: Cargo.toml
crates/graphcal-tir/src/: lib.rs  tir.rs
crates/kasuri-cli/: Cargo.toml
crates/kasuri-cli/src/: main.rs
crates/kasuri-cli/tests/: cli.rs
crates/kasuri-eval/: Cargo.toml
crates/kasuri-eval/src/: builtins.rs  const_eval.rs  dag.rs  dim_check.rs  error.rs  eval.rs  eval_expr.rs  fn_check.rs  lib.rs  loader.rs  prelude.rs  registry.rs  resolve.rs
crates/kasuri-eval/tests/: error_snapshots.rs
crates/kasuri-syntax/: Cargo.toml
crates/kasuri-syntax/src/: ast.rs  dimension.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
(+953 files in other folders)
