[package]
name = "graphcal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
graphcal-dag = { workspace = true }
graphcal-eval = { workspace = true }
graphcal-fmt = { workspace = true }
graphcal-io = { workspace = true }
graphcal-lsp = { workspace = true }
graphcal-syntax = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
rustyline = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
plotly = { workspace = true }
open = { workspace = true }

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
