[package]
name = "graphcal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
graphcal-compiler = { workspace = true }
graphcal-eval = { workspace = true }
graphcal-fmt = { workspace = true }
graphcal-io = { workspace = true }
graphcal-lsp = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
open = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
