[package]
name = "graphcal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
gix = { workspace = true }
graphcal-compiler = { workspace = true }
graphcal-eval = { workspace = true }
graphcal-fmt = { workspace = true }
graphcal-io = { workspace = true }
graphcal-lsp = { workspace = true }
graphcal-package = { workspace = true }
graphcal-plugin-host.workspace = true
miette = { workspace = true, features = ["fancy"] }
open = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
stacker.workspace = true
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
graphcal-plugin-abi.workspace = true
indexmap.workspace = true
insta.workspace = true
serde_json.workspace = true
wat.workspace = true

[lints]
workspace = true

[build-dependencies]
gix = { workspace = true, default-features = false, features = ["sha1"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
