[package]
name = "graphcal-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-ir = { workspace = true }
graphcal-registry = { workspace = true }
graphcal-tir = { workspace = true }
indexmap.workspace = true
graphcal-syntax = { workspace = true }
miette.workspace = true
petgraph = { workspace = true }
thiserror.workspace = true
hifitime.workspace = true
jiff.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true
