[package]
name = "graphcal-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-compiler = { workspace = true }
graphcal-io = { workspace = true }
hifitime.workspace = true
indexmap.workspace = true
jiff.workspace = true
miette.workspace = true
petgraph = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true
