[package]
name = "graphcal-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-compiler = { workspace = true }
pretty = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
