[package]
name = "graphcal-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Language Server Protocol implementation for Graphcal"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-eval = { workspace = true }
graphcal-fmt = { workspace = true }
graphcal-syntax = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }

[lints]
workspace = true
