[package]
name = "graphcal-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-compiler = { workspace = true }
graphcal-eval = { workspace = true }
graphcal-plugin-abi = { workspace = true }
sha2.workspace = true
thiserror.workspace = true
wasmi.workspace = true

[lints]
workspace = true

[dev-dependencies]
graphcal-io = { workspace = true }
graphcal-package = { workspace = true }
tempfile.workspace = true
wat.workspace = true
