[package]
name = "graphcal-plugin-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
graphcal-plugin-abi = { workspace = true }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
