[package]
name = "graphcal-tir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
graphcal-ir = { workspace = true }
graphcal-registry = { workspace = true }
graphcal-syntax = { workspace = true }
indexmap.workspace = true
jiff.workspace = true
miette.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
