[package]
name = "kasuri"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kasuri-eval = { workspace = true }
kasuri-syntax = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

[dev-dependencies]
serde_json.workspace = true
