[package]
name = "kasuri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
kasuri-eval = { workspace = true }
kasuri-syntax = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
