[package]
name = "kasuri-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexmap.workspace = true
kasuri-syntax = { workspace = true }
miette.workspace = true
petgraph = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
