[package]
name = "kasuri-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
kasuri-syntax = { workspace = true }
miette.workspace = true
petgraph = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
